crates/carta/tests/snapshots/golden_writer__docbook__table__table-grid-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<informaltable>
  <tgroup cols="2">
    <colspec colwidth="5*" align="left" />
    <colspec colwidth="13*" align="left" />
    <thead>
      <row>
        <entry>
          a
        </entry>
        <entry>
          b
        </entry>
      </row>
    </thead>
    <tbody>
      <row>
        <entry>
          1
        </entry>
        <entry>
          2
        </entry>
      </row>
    </tbody>
  </tgroup>
</informaltable>
