crates/carta/tests/snapshots/golden_writer__docbook__table__table-headerless-plain.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<informaltable>
  <tgroup cols="2">
    <colspec align="left" />
    <colspec align="left" />
    <tbody>
      <row>
        <entry>
          a
        </entry>
        <entry>
          b
        </entry>
      </row>
      <row>
        <entry>
          c
        </entry>
        <entry>
          d
        </entry>
      </row>
    </tbody>
  </tgroup>
</informaltable>
