crates/carta/tests/snapshots/golden_writer__docbook__table__table-multiple-bodies.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<informaltable>
  <tgroup cols="2">
    <colspec align="left" />
    <colspec align="left" />
    <thead>
      <row>
        <entry>
          h1
        </entry>
        <entry>
          h2
        </entry>
      </row>
    </thead>
    <tbody>
      <row>
        <entry>
          a1
        </entry>
        <entry>
          a2
        </entry>
      </row>
      <row>
        <entry>
          b1
        </entry>
        <entry>
          b2
        </entry>
      </row>
    </tbody>
  </tgroup>
</informaltable>
