crates/carta/tests/snapshots/golden_writer__docbook__table__table-rowspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<informaltable>
  <tgroup cols="2">
    <colspec align="left" />
    <colspec align="left" />
    <tbody>
      <row>
        <entry>
          tall
        </entry>
        <entry>
          a
        </entry>
      </row>
      <row>
        <entry>
        </entry>
        <entry>
          b
        </entry>
      </row>
    </tbody>
  </tgroup>
</informaltable>
