crates/carta/tests/snapshots/golden_writer__docbook__table__table-short-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<table>
  <title>The full caption text</title>
  <tgroup cols="1">
    <colspec align="left" />
    <thead>
      <row>
        <entry>
          h
        </entry>
      </row>
    </thead>
    <tbody>
      <row>
        <entry>
          v
        </entry>
      </row>
    </tbody>
  </tgroup>
</table>
